feat(project): Fix versioning problem
